unpackaged/main/default/objects/Enquiries_and_Bookings__c/fields/Last_Month_SITU_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Last_Month_SITU_Revenue__c</fullName>
    <label>Last Month SITU Revenue</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>