unpackaged/main/default/objects/Enquiries_and_Bookings__c/fields/Last_Year_Check_In_Date_Formula__c.field-meta.xml
<CustomField>
    <fullName>Last_Year_Check_In_Date_Formula__c</fullName>
    <formula>IF(AND( Check_In_Date__c &lt;   Last_Month_Start_Date_Formula__c   , Check_Out_Date__c &gt;  Last_Month_Start_Date_Formula__c  ),  Last_Month_Start_Date_Formula__c  , IF(Check_In_Date__c &gt;   Last_Year_End_Date_Formula__c   , NULL, Check_In_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Year Check In Date Formula</label>
    <type>Date</type>
</CustomField>