unpackaged/main/default/objects/Enquiries_and_Bookings__c/fields/Last_Year_Check_Out_Date_Formula__c.field-meta.xml
<CustomField>
    <fullName>Last_Year_Check_Out_Date_Formula__c</fullName>
    <formula>IF(Check_In_Date__c &gt;   Last_Year_End_Date_Formula__c   , NULL, IF( Check_Out_Date__c &lt;   Last_Year_Start_Date_Formula__c   , NULL, IF(Check_Out_Date__c &gt;  Last_Year_End_Date_Formula__c  ,  Last_Year_End_Date_Formula__c  + 1, Check_Out_Date__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Year Check Out Date Formula</label>
    <type>Date</type>
</CustomField>