unpackaged/main/default/objects/Enquiries_and_Bookings__c/fields/Last_Year_Client_Commission_Formula__c.field-meta.xml
<CustomField>
    <fullName>Last_Year_Client_Commission_Formula__c</fullName>
    <formula>Last_Year_Revenue_Formula__c  *  Client_Commission__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Year Client Commission Formula</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>