unpackaged/main/default/objects/Enquiries_and_Bookings__c/fields/Last_Year_Revenue_Formula__c.field-meta.xml
<CustomField>
    <fullName>Last_Year_Revenue_Formula__c</fullName>
    <formula>Nights_in_Last_Year_Formula__c  *  Net_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Year Revenue Formula</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>