unpackaged/main/default/objects/Enquiries_and_Bookings__c/fields/Last_Year_SITU_Revenue_Formula__c.field-meta.xml
<CustomField>
    <fullName>Last_Year_SITU_Revenue_Formula__c</fullName>
    <formula>Last_Year_Commission_Formula__c  -  Last_Year_Client_Commission_Formula__c  +  Last_Year_Booking_Fee_Formula__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Year SITU Revenue Formula</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>