unpackaged/main/default/objects/Enquiries_and_Bookings__c/fields/Last_Year_Start_Date_Formula__c.field-meta.xml
<CustomField>
    <fullName>Last_Year_Start_Date_Formula__c</fullName>
    <formula>addMonths(  This_Year_Start_Date_Formula__c  ,-12)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Year Start Date Formula</label>
    <type>Date</type>
</CustomField>