unpackaged/main/default/objects/Enquiries_and_Bookings__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lead that matches by email</description>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipName>Enquiries_and_Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>