unpackaged/main/default/objects/Enquiries_and_Bookings__c/fields/Location_Address_Country__c.field-meta.xml
<CustomField>
    <fullName>Location_Address_Country__c</fullName>
    <inlineHelpText>The Country of the Location, e.g. United Kingdom</inlineHelpText>
    <label>Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>