unpackaged/main/default/objects/Enquiries_and_Bookings__c/fields/Location_Address_Line_1__c.field-meta.xml
<CustomField>
    <fullName>Location_Address_Line_1__c</fullName>
    <inlineHelpText>Street name and number - for example 10, Main Street</inlineHelpText>
    <label>Line 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>