unpackaged/main/default/objects/Enquiries_and_Bookings__c/fields/Location_Address_Line_2__c.field-meta.xml
<CustomField>
    <fullName>Location_Address_Line_2__c</fullName>
    <inlineHelpText>Secondary Address line - for example Borough</inlineHelpText>
    <label>Line 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>