unpackaged/main/default/objects/Enquiries_and_Bookings__c/fields/Location_Address_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Location_Address_Postal_Code__c</fullName>
    <inlineHelpText>Postal Code for the Location. e.g. DA17 5EX</inlineHelpText>
    <label>Postal Code / Zip</label>
    <length>255</length>
    <type>Text</type>
</CustomField>