unpackaged/main/default/objects/Enquiries_and_Bookings__c/fields/Location_Address_Region__c.field-meta.xml
<CustomField>
    <fullName>Location_Address_Region__c</fullName>
    <inlineHelpText>The Region for the Location Address e.g. Greater London or Devon</inlineHelpText>
    <label>Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>