unpackaged/main/default/objects/Enquiries_and_Bookings__c/fields/Location_Address_Town_City__c.field-meta.xml
<CustomField>
    <fullName>Location_Address_Town_City__c</fullName>
    <inlineHelpText>The Town or City for the Location Address eg. Taunton</inlineHelpText>
    <label>Town / City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>