unpackaged/main/default/objects/Enquiries_and_Bookings__c/fields/Master_Record_Updates__c.field-meta.xml
<CustomField>
    <fullName>Master_Record_Updates__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Master Record Updates</label>
    <type>Checkbox</type>
</CustomField>