unpackaged/main/default/objects/Enquiries_and_Bookings__c/fields/Next_Month_Check_Out_Date_Formula__c.field-meta.xml
<CustomField>
    <fullName>Next_Month_Check_Out_Date_Formula__c</fullName>
    <formula>IF(Check_In_Date__c &gt;   Next_Month_End_Date_Formula__c   , NULL, IF( Check_Out_Date__c &lt;   Next_Month_Start_Date_Formula__c  , NULL, IF(Check_Out_Date__c &gt;  Next_Month_End_Date_Formula__c  ,  Next_Month_End_Date_Formula__c  + 1, Check_Out_Date__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Next Month Check Out Date Formula</label>
    <type>Date</type>
</CustomField>