unpackaged/main/default/objects/Enquiries_and_Bookings__c/fields/Next_Month_Client_Commission_Formula__c.field-meta.xml
<CustomField>
    <fullName>Next_Month_Client_Commission_Formula__c</fullName>
    <formula>Next_Month_Revenue_Formula__c  *  Client_Commission__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Next Month Client Commission Formula</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>