unpackaged/main/default/objects/Enquiries_and_Bookings__c/fields/Next_Month_End_Date_Formula__c.field-meta.xml
<CustomField>
    <fullName>Next_Month_End_Date_Formula__c</fullName>
    <formula>DATE( Year(ADDMONTHS(TODAY(),2)),MONTH( ADDMONTHS(TODAY(),2)),1 ) - 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Next Month End Date Formula</label>
    <type>Date</type>
</CustomField>