unpackaged/main/default/objects/Enquiries_and_Bookings__c/fields/Next_Month_Start_Date_Formula__c.field-meta.xml
<CustomField>
    <fullName>Next_Month_Start_Date_Formula__c</fullName>
    <formula>This_Month_End_Date_Formula__c  + 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Next Month Start Date Formula</label>
    <type>Date</type>
</CustomField>