unpackaged/main/default/objects/Enquiries_and_Bookings__c/fields/Next_Year_Client_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Next_Year_Client_Revenue__c</fullName>
    <label>Next Year Client Revenue</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>