unpackaged/main/default/objects/Enquiries_and_Bookings__c/fields/Nights_Booked_This_Year__c.field-meta.xml
<CustomField>
    <fullName>Nights_Booked_This_Year__c</fullName>
    <label>Nights Booked This Year</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>