unpackaged/main/default/objects/Enquiries_and_Bookings__c/fields/Nights_in_House__c.field-meta.xml
<CustomField>
    <fullName>Nights_in_House__c</fullName>
    <label>Nights in House</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>