unpackaged/main/default/objects/Enquiries_and_Bookings__c/fields/Nights_in_House_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Nights_in_House_Remaining__c</fullName>
    <formula>IF(  Number_of_Nights__c   -   Nights_in_House__c   = 0,  0 ,  Number_of_Nights__c  -  Nights_in_House__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nights in House Remaining</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>