unpackaged/main/default/objects/Enquiries_and_Bookings__c/fields/Nights_in_Next_Month_Formula__c.field-meta.xml
<CustomField>
    <fullName>Nights_in_Next_Month_Formula__c</fullName>
    <formula>Next_Month_Check_Out_Date_Formula__c  -  Next_Month_Check_In_Date_Formula__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nights in Next Month Formula</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>