unpackaged/main/default/objects/Enquiries_and_Bookings__c/fields/Number_of_Nights__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Nights__c</fullName>
    <formula>Check_Out_Date__c  -  Check_In_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Nights</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>