unpackaged/main/default/objects/Enquiries_and_Bookings__c/fields/Order_Reference__c.field-meta.xml
<CustomField>
    <fullName>Order_Reference__c</fullName>
    <label>Order Reference</label>
    <length>150</length>
    <type>Text</type>
</CustomField>