unpackaged/main/default/objects/Enquiries_and_Bookings__c/fields/Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Owner_Name__c</fullName>
    <label>Owner Name</label>
    <length>225</length>
    <type>Text</type>
</CustomField>