unpackaged/main/default/objects/Enquiries_and_Bookings__c/fields/Re_Quoting_to_ReQuoted_Time__c.field-meta.xml
<CustomField>
    <fullName>Re_Quoting_to_ReQuoted_Time__c</fullName>
    <formula>FLOOR(( Date_Time_First_ReQuoted__c   -  Date_Time_First_Re_Quoting__c ) * 24)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Re Quoting to ReQuoted Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>