unpackaged/main/default/objects/Enquiries_and_Bookings__c/fields/Re_Quoting_to_ReQuoted_Time_in_Bus_Mins__c.field-meta.xml
<CustomField>
    <fullName>Re_Quoting_to_ReQuoted_Time_in_Bus_Mins__c</fullName>
    <formula>ROUND( 510 * (
   ( 5 * FLOOR( ( DATEVALUE( Date_Time_First_ReQuoted__c ) - DATE( 1900, 1, 8) ) / 7) +
    MIN(5, 
     MOD( DATEVALUE( Date_Time_First_ReQuoted__c ) - DATE( 1900, 1, 8), 7) +
     MIN( 1, 1440 / 510 * ( MOD( Date_Time_First_ReQuoted__c - DATETIMEVALUE( &#39;1900-01-08 08:00:00&#39; ), 1 ) ) )
    ) 
   )
 -
   ( 5 * FLOOR( ( DATEVALUE( Date_Time_First_Re_Quoting__c ) - DATE( 1900, 1, 8) ) / 7) +
     MIN( 5,
      MOD( DATEVALUE( Date_Time_First_Re_Quoting__c ) - DATE( 1996, 1, 1), 7 ) +
      MIN( 1, 1440 / 510 * ( MOD( Date_Time_First_Re_Quoting__c - DATETIMEVALUE( &#39;1900-01-08 08:00:00&#39; ), 1) ) )
    )
   ) 
  ), 
0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Re Quoting to ReQuoted Time in Bus Mins</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>