unpackaged/main/default/objects/Enquiries_and_Bookings__c/fields/Real_Time_Nights_Stayed__c.field-meta.xml
<CustomField>
    <fullName>Real_Time_Nights_Stayed__c</fullName>
    <formula>IF(AND(Today()  &gt;  Check_In_Date__c , ( Actual_Nights_Formula__c  = 0)),  Number_of_Nights__c ,  Actual_Nights_Formula__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Real Time Nights Stayed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>