unpackaged/main/default/objects/Enquiries_and_Bookings__c/fields/Situ_Reference__c.field-meta.xml
<CustomField>
    <fullName>Situ_Reference__c</fullName>
    <label>Situ Reference</label>
    <length>10</length>
    <type>Text</type>
</CustomField>