unpackaged/main/default/objects/Enquiries_and_Bookings__c/fields/SLA_Alert_Re_Quoting_to_ReQuoted__c.field-meta.xml
<CustomField>
    <fullName>SLA_Alert_Re_Quoting_to_ReQuoted__c</fullName>
    <formula>IF( AND(  SLA_Response_Time_Target_Minutes__c   &gt;= 240, SLA_Response_Time_Target_Minutes__c -     Re_Quoting_to_ReQuoted_SLA_Timer__c     &gt; 120),IMAGE(&quot;/img/samples/color_green.gif&quot;, &quot;green&quot;, 30, 30), 
IF( AND( SLA_Response_Time_Target_Minutes__c   &lt;  240, SLA_Response_Time_Target_Minutes__c -   Re_Quoting_to_ReQuoted_SLA_Timer__c   &gt; 60),IMAGE(&quot;/img/samples/color_green.gif&quot;, &quot;green&quot;, 30, 30),
IF(  (SLA_Response_Time_Target_Minutes__c  -   Re_Quoting_to_ReQuoted_SLA_Timer__c    &lt;=  0), IMAGE(&quot;/img/samples/color_red.gif&quot;, &quot;red&quot;, 30, 30),
IMAGE(&quot;/img/samples/color_yellow.gif&quot;, &quot;yellow&quot;, 30, 30))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SLA Alert Re Quoting to ReQuoted</label>
    <type>Text</type>
</CustomField>