unpackaged/main/default/objects/Enquiries_and_Bookings__c/fields/SLA_Response_Time_Target__c.field-meta.xml
<CustomField>
    <fullName>SLA_Response_Time_Target__c</fullName>
    <label>SLA Response Time Target</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Other Time Response SLA</fullName>
            </value>
            <value>
                <fullName>Local Time Response SLA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>