unpackaged/main/default/objects/Enquiries_and_Bookings__c/fields/SLA_Response_Time_Target_Minutes__c.field-meta.xml
<CustomField>
    <fullName>SLA_Response_Time_Target_Minutes__c</fullName>
    <label>SLA Response Time Target (Minutes)</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>