unpackaged/main/default/objects/Enquiries_and_Bookings__c/fields/SLA_Response_Time_Target_Value_del_del__c.field-meta.xml
<CustomField>
    <fullName>SLA_Response_Time_Target_Value_del_del__c</fullName>
    <formula>IF( ISPICKVAL( SLA_Response_Time_Target__c , &quot;Local Time Response SLA&quot;), Account__r.Local_Time_Response_SLA__c , IF ( ISPICKVAL(SLA_Response_Time_Target__c, &quot;Other Time Response SLA&quot;),  Account__r.Other_Time_Response_SLA__c , NULL))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SLA Response Time Target Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>