unpackaged/main/default/objects/Enquiries_and_Bookings__c/fields/SLA_Timer_Enquiry_to_Quote__c.field-meta.xml
<CustomField>
    <fullName>SLA_Timer_Enquiry_to_Quote__c</fullName>
    <label>SLA Timer Enquiry to Quote</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>