unpackaged/main/default/objects/Enquiries_and_Bookings__c/fields/SLA_Timer_Re_Quoting_to_ReQuoted__c.field-meta.xml
<CustomField>
    <fullName>SLA_Timer_Re_Quoting_to_ReQuoted__c</fullName>
    <label>SLA Timer Re Quoting to ReQuoted</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>