unpackaged/main/default/objects/Enquiries_and_Bookings__c/fields/Supplier_Account__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supplier Account</label>
    <referenceTo>Supplier_Accounts__c</referenceTo>
    <relationshipName>Enquiries_and_Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>