unpackaged/main/default/objects/Enquiries_and_Bookings__c/fields/Supplier_Building__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Building__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supplier Building</label>
    <referenceTo>Supplier_Buildings__c</referenceTo>
    <relationshipName>Enquiries_and_Bookings1</relationshipName>
    <type>Lookup</type>
</CustomField>