unpackaged/main/default/objects/Enquiries_and_Bookings__c/fields/Supplier_Contact__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supplier Contact</label>
    <referenceTo>Supplier_Contacts__c</referenceTo>
    <relationshipName>Enquiries_and_Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>