unpackaged/main/default/objects/Enquiries_and_Bookings__c/fields/Supply_Contact__c.field-meta.xml
<CustomField>
    <fullName>Supply_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supply Contact</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Supply Contact value does not exist or does not match filter criteria.</errorMessage>
        <filterItems>
            <field>Contact.RecordType.Id</field>
            <operation>equals</operation>
            <value>0128e000000XkyLAAS</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Enquiries and Bookings (Supply)</relationshipLabel>
    <relationshipName>Enquiries_and_Bookings2</relationshipName>
    <type>Lookup</type>
</CustomField>