unpackaged/main/default/objects/Enquiries_and_Bookings__c/fields/The_Quarter_Last_Year_SITU_Revenue__c.field-meta.xml
<CustomField>
    <fullName>The_Quarter_Last_Year_SITU_Revenue__c</fullName>
    <label>The Quarter Last Year SITU Revenue</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>