unpackaged/main/default/objects/Enquiries_and_Bookings__c/fields/This_Month_Check_In_Date_Formula__c.field-meta.xml
<CustomField>
    <fullName>This_Month_Check_In_Date_Formula__c</fullName>
    <formula>IF(AND( Check_In_Date__c &lt; DATE(YEAR(TODAY()),MONTH(TODAY()),1),  Check_Out_Date__c &gt; DATE(YEAR(TODAY()),MONTH(TODAY()),1)), DATE(YEAR(TODAY()),MONTH(TODAY()),1), IF(Check_In_Date__c &gt;   This_Month_End_Date_Formula__c  , NULL, Check_In_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>This Month Check In Date Formula</label>
    <type>Date</type>
</CustomField>