unpackaged/main/default/objects/Enquiries_and_Bookings__c/fields/This_Month_Check_Out_Date_Formula__c.field-meta.xml
<CustomField>
    <fullName>This_Month_Check_Out_Date_Formula__c</fullName>
    <formula>IF(Check_In_Date__c &gt;  This_Month_End_Date_Formula__c  , NULL, IF( Check_Out_Date__c &lt; DATE(YEAR(TODAY()),MONTH(TODAY()),1), NULL, IF(Check_Out_Date__c &gt;  This_Month_End_Date_Formula__c , This_Month_End_Date_Formula__c + 1, Check_Out_Date__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>This Month Check Out Date Formula</label>
    <type>Date</type>
</CustomField>