unpackaged/main/default/objects/Enquiries_and_Bookings__c/fields/This_Month_End_Date_Formula__c.field-meta.xml
<CustomField>
    <fullName>This_Month_End_Date_Formula__c</fullName>
    <formula>ADDMONTHS(DATE(YEAR(TODAY()),1,31),MONTH(TODAY()) -1 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>This Month End Date Formula</label>
    <type>Date</type>
</CustomField>