unpackaged/main/default/objects/Enquiries_and_Bookings__c/fields/This_Month_Enquiries__c.field-meta.xml
<CustomField>
    <fullName>This_Month_Enquiries__c</fullName>
    <label>This Month Enquiries</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>