unpackaged/main/default/objects/Enquiries_and_Bookings__c/fields/This_Month_Revenue_Formula__c.field-meta.xml
<CustomField>
    <fullName>This_Month_Revenue_Formula__c</fullName>
    <formula>Nights_in_This_Month_Formula__c  *  Net_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>This Month Revenue Formula</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>