unpackaged/main/default/objects/Enquiries_and_Bookings__c/fields/This_Month_Start_Date_Formula__c.field-meta.xml
<CustomField>
    <fullName>This_Month_Start_Date_Formula__c</fullName>
    <formula>DATE(YEAR(TODAY()),MONTH(TODAY()),1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>This Month Start Date Formula</label>
    <type>Date</type>
</CustomField>