unpackaged/main/default/objects/Enquiries_and_Bookings__c/fields/This_Qtr_Last_Year_Check_In_Date_Formula__c.field-meta.xml
<CustomField>
    <fullName>This_Qtr_Last_Year_Check_In_Date_Formula__c</fullName>
    <formula>IF(AND( Check_In_Date__c &lt;   This_Qtr_Last_Year_Start_Date_Formula__c , Check_Out_Date__c &gt;  This_Qtr_Last_Year_Start_Date_Formula__c  ),  This_Qtr_Last_Year_Start_Date_Formula__c  , IF(Check_In_Date__c &gt;   This_Qtr_Last_Year_End_Date_Formula__c   , NULL, Check_In_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>This Qtr Last Year Check In Date Formula</label>
    <type>Date</type>
</CustomField>