unpackaged/main/default/objects/Enquiries_and_Bookings__c/fields/This_Qtr_Last_Year_Start_Date_Formula__c.field-meta.xml
<CustomField>
    <fullName>This_Qtr_Last_Year_Start_Date_Formula__c</fullName>
    <formula>addMonths(  Last_Month_Start_Date_Formula__c  ,-12)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>This Qtr Last Year Start Date Formula</label>
    <type>Date</type>
</CustomField>